Centered the profile cards

--- a/index.html
+++ b/index.html
@@ -22,14 +22,34 @@
         </ul>
       </nav>
     </header>
-    <div class="profile-card">
-      <img src="https://picsum.photos/100" alt="Profile Image" class="profile-photo" />
-      <h3>John Doe</h3>
-      <p>
-        John is a passionate web developer with expertise in creating user-friendly interfaces and
-        engaging web experiences.
-      </p>
-    </div>
+    <main>
+      <div class="profileContainer">
+        <div class="profile-card">
+          <img src="https://picsum.photos/100" alt="Profile Image" class="profile-photo" />
+          <h3>Binyam Haile</h3>
+          <p>
+            John is a passionate web developer with expertise in creating user-friendly interfaces
+            and engaging web experiences.
+          </p>
+        </div>
+        <div class="profile-card">
+          <img src="https://picsum.photos/101" alt="Profile Image" class="profile-photo" />
+          <h3>Chris Le</h3>
+          <p>
+            John is a passionate web developer with expertise in creating user-friendly interfaces
+            and engaging web experiences.
+          </p>
+        </div>
+        <div class="profile-card">
+          <img src="https://picsum.photos/102" alt="Profile Image" class="profile-photo" />
+          <h3>Ivan Matev</h3>
+          <p>
+            John is a passionate web developer with expertise in creating user-friendly interfaces
+            and engaging web experiences.
+          </p>
+        </div>
+      </div>
+    </main>
     <footer>
       <div class="footer-content">
         <div class="footer-section">
