--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         padding: 0;
         background: #f4f4f4;
       }
+
       /* Header Css */
-      body {
-        margin-top: 0;
-        padding: 0;
+      header {
         display: flex;
         justify-content: center;
         align-items: center;
         height: 100vh;
         background: #112c38;
+        margin: 0;
       }
 
       ul {
