--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background: #112c38;
+        background: #330033;
         margin: 0;
       }
 
@@ -61,7 +61,7 @@
         opacity: 1;
         filter: blur(0);
         text-decoration: none;
-        color: #fff;
+        color: #999966;
       }
 
       ul li a:before {
@@ -71,7 +71,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: #ff497c;
+        background: #333333;
         transition: 0.5s;
         transform-origin: right;
         transform: scaleX(0);
