reworking color theme

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background: #330033;
+        background: #333333;
         margin: 0;
       }
 
@@ -61,7 +61,7 @@
         opacity: 1;
         filter: blur(0);
         text-decoration: none;
-        color: #999966;
+        color: #66cccc;
       }
 
       ul li a:before {
