--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: #333333;
+        background: #6699cc;
         transition: 0.5s;
         transform-origin: right;
         transform: scaleX(0);
