--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Profile Cards</title>
+    <title>Triple A Team Profile Cards</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
@@ -22,7 +22,7 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background: #333333;
+        background: #9999cc;
         margin: 0;
       }
 
@@ -61,7 +61,7 @@
         opacity: 1;
         filter: blur(0);
         text-decoration: none;
-        color: #66cccc;
+        color: #333333;
       }
 
       ul li a:before {
