--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Triple A Team Profile Cards</title>
+    <title>My Profile Cards</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
@@ -168,7 +168,8 @@
   </head>
   <body>
     <header>
-      <h1>My Profile Cards</h1>
+      <h1>Team Triple A's Profile Cards</h1>
+      <br />
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
