Updated footer to include contact information, quick links, and social media links. Added email and phone number. Implemented responsive design for different screen sizes.

--- a/index.html
+++ b/index.html
@@ -99,25 +99,24 @@
     <footer>
       <div class="footer-content">
         <div class="footer-section">
-          <h3>About Us</h3>
-          <p>Details about the company.</p>
+          <h3>Contact Us</h3>
+          <!-- we used email logo and clickable email address -->
+          <p><span style="font-size: 20px;">✉</span> <a href="mailto:example@gmail.com">example@gmail.com</a></p>
+          <p>Phone: 123-456-7890</p>
         </div>
-        <div class="footer-section">
-          <h3>Contact</h3>
-          <p>Email: example@example.com</p>
-        </div>
-        <div class="footer-section">
-          <h3>Follow Us</h3>
-          <ul>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Instagram</a></li>
-          </ul>
-        </div>
+      <div class="footer-section">
+        <h3>Follow Us</h3>
+        <!-- we used social media icons and clickable links -->
+        <ul class="social-links">
+          <li><a href="https://www.instagram.com/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1024px-Instagram_icon.png" alt="Instagram"></a></li>
+          <li><a href="https://twitter.com/"><img src="https://www.vectorlogo.zone/logos/twitter/twitter-icon.svg" alt="Twitter"></a></li>
+          <li><a href="https://www.facebook.com/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Facebook_f_logo_%282019%29.svg/1200px-Facebook_f_logo_%282019%29.svg.png" alt="Facebook"></a></li>
+        </ul>
       </div>
-      <div class="footer-bottom">
-        <p>&copy; 2024 My Profile Cards. All rights reserved.</p>
-      </div>
-    </footer>
-  </body>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2024 My Profile Cards. All rights reserved.</p>
+    </div>
+  </footer>
+</body>
 </html>
