Completed styling the profile cards and included bios for each card

--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#"
-                >Home <span class="sr-only">(current)</span></a
-              >
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Features</a>
@@ -59,38 +57,45 @@
               placeholder="Search"
               aria-label="Search"
             />
-            <button class="btn btn-outline-info my-2 my-sm-0" type="submit">
-              Search
-            </button>
+            <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
           </form>
         </div>
       </nav>
     </header>
 
     <main>
-      <div class="profileContainer">
+      <div class="profile-container">
         <div class="profile-card">
           <img src="https://picsum.photos/100" alt="Profile Image" class="profile-photo" />
           <h3>Binyam Haile</h3>
           <p>
-            John is a passionate web developer with expertise in creating user-friendly interfaces
-            and engaging web experiences.
+            Binyam is a skilled full-stack Java developer and AWS Certified Solutions Architect with
+            over 7+ years of comprehensive experience in the field, including 5+ years specifically
+            dedicated to Full-Stack development. Committed to delivering high-performance software
+            solutions that adhere to industry coding standards and best practices, Binyam is known
+            for his expertise in clean crafting architecture and meticulous preparation of technical
+            documentation to ensure scalability and maintainability of projects.
           </p>
         </div>
         <div class="profile-card">
           <img src="https://picsum.photos/101" alt="Profile Image" class="profile-photo" />
           <h3>Chris Le</h3>
           <p>
-            John is a passionate web developer with expertise in creating user-friendly interfaces
-            and engaging web experiences.
+            Hi I am Christopher Le, I love problem solving with various creative solutions, writing
+            efficient code, and working in a team environment with a passion for Front-End
+            Development. Enjoy using technology such as Javascript, React.js, Node.js, and much
+            more! I look forward to learning and growing as technology progresses further each year!
           </p>
         </div>
         <div class="profile-card">
           <img src="https://picsum.photos/102" alt="Profile Image" class="profile-photo" />
           <h3>Ivan Matev</h3>
           <p>
-            John is a passionate web developer with expertise in creating user-friendly interfaces
-            and engaging web experiences.
+            Ivan is an aspiring Software Developer with experience working to improve the
+            performance of organizations serving hundreds of individuals each year. Adept at
+            collaborating with others while ensuring high-quality services and programs. Career
+            history of training and supervising staff, promoting adherence to organizational
+            policies and industry standards.
           </p>
         </div>
       </div>
