--- a/index.html
+++ b/index.html
@@ -4,174 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Profile Cards</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <style>
-      body {
-        font-family: "Open Sans", sans-serif;
-        margin: 0;
-        padding: 0;
-        background: #f4f4f4;
-      }
-
-      /* Header Css */
-      header {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 28vh;
-        background: #9999cc;
-        margin: 0;
-      }
-      nav {
-        background: #333;
-      }
-      .NavBar {
-        display: flex;
-        justify-content: center;
-      }
-
-      ul {
-        margin: 0;
-        padding: 0;
-        display: flex;
-      }
-
-      ul li {
-        list-style: none;
-        margin: 0 20px;
-        transition: 0.5s;
-      }
-
-      ul li a {
-        display: block;
-        position: relative;
-        text-decoration: none;
-        padding: 5px;
-        font-size: 18px;
-        font-family: sans-serif;
-        color: #fff;
-        text-transform: uppercase;
-        transition: 0.5s;
-      }
-
-      ul:hover li a {
-        transform: scale(1.5);
-        opacity: 0.2;
-        filter: blur(5px);
-      }
-
-      ul li a:hover {
-        transform: scale(2);
-        opacity: 1;
-        filter: blur(0);
-        text-decoration: none;
-        color: #333333;
-      }
-
-      ul li a:before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: #6699cc;
-        transition: 0.5s;
-        transform-origin: right;
-        transform: scaleX(0);
-        z-index: -1;
-      }
-
-      ul li a:hover:before {
-        transition: transform 0.5s;
-        transform-origin: left;
-        transform: scaleX(1);
-      }
-
-      /* Footer CSS */
-      footer {
-        background-color: #333;
-        color: #ffffff;
-        text-align: center;
-        padding: 10px;
-        font-size: 12px;
-      }
-
-      .footer-content {
-        display: flex;
-        justify-content: space-around;
-        padding: 10px;
-      }
-
-      .footer-section {
-        margin: 5px;
-      }
-
-      .footer-section h3 {
-        color: #ffff99;
-        font-size: 14px;
-      }
-
-      .footer-section p,
-      .footer-section li a {
-        color: #cccccc;
-        font-size: 12px;
-      }
-
-      .footer-section ul {
-        list-style-type: none;
-        padding: 0;
-      }
-
-      .footer-section li a {
-        text-decoration: none;
-        color: inherit;
-        transition: color 0.3s;
-      }
-
-      .footer-section li a:hover {
-        color: #ffffff;
-      }
-
-      .footer-bottom {
-        margin-top: 10px;
-        border-top: 1px solid #444;
-        padding-top: 5px;
-      }
-
-      .footer-bottom p {
-        margin: 0;
-      }
-
-      /* Profile Card CSS */
-      .profile-card {
-        background: white;
-        border: 1px solid #ddd;
-        margin: 20px auto;
-        padding: 20px;
-        width: 80%;
-        max-width: 600px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        text-align: center;
-      }
-
-      .profile-card img {
-        border-radius: 50%;
-      }
-
-      .profile-card h2 {
-        color: #333;
-      }
-
-      .profile-card p {
-        font-size: 16px;
-        line-height: 1.5;
-        color: #666;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
