commit new changes

--- a/index.html
+++ b/index.html
@@ -165,6 +165,18 @@
         user-friendly interfaces and engaging web experiences.
       </p>
     </div>
+    <div class="profile-card">
+      <img
+        src="https://picsum.photos/100"
+        alt="Profile Image"
+        class="profile-photo"
+      />
+      <h3>Katie Cea</h3>
+      <p>
+        Katie is a passionate web developer with expertise in creating
+        user-friendly interfaces and engaging web experiences.
+      </p>
+    </div>
     <footer>
       <div class="footer-content">
         <div class="footer-section">
