minor change to header

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
   </head>
   <body>
     <header>
-      <h1>Team Triple A's Profile Cards</h1>
+      <h1.header="""></h1.header>Team A's Profile Cards</h1>
     </header>
     <nav>
       <div class="NavBar">
