--- a/index.html
+++ b/index.html
@@ -14,31 +14,26 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="grid-wrapper">
     <header>
       <h1>My Profile Cards</h1>
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar">
         <a class="navbar-brand" href="#">Navbar</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarColor01"
-          aria-controls="navbarColor01"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarColor01">
+        <div class="hamburger" id="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="nav-links" id="nav-links">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#"
+                >Home <span class="sr-only">(current)</span></a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Features</a>
@@ -50,15 +45,6 @@
               <a class="nav-link" href="#">About</a>
             </li>
           </ul>
-          <form class="form-inline">
-            <input
-              class="form-control mr-sm-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
-          </form>
         </div>
       </nav>
     </header>
@@ -66,36 +52,52 @@
     <main>
       <div class="profile-container">
         <div class="profile-card">
-          <img src="https://picsum.photos/100" alt="Profile Image" class="profile-photo" />
+          <img
+            src="https://picsum.photos/100"
+            alt="Profile Image"
+            class="profile-photo"
+          />
           <h3>Binyam Haile</h3>
           <p>
-            Binyam is a skilled full-stack Java developer and AWS Certified Solutions Architect with
-            over 7+ years of comprehensive experience in the field, including 5+ years specifically
-            dedicated to Full-Stack development. Committed to delivering high-performance software
-            solutions that adhere to industry coding standards and best practices, Binyam is known
-            for his expertise in clean crafting architecture and meticulous preparation of technical
-            documentation to ensure scalability and maintainability of projects.
+            Binyam is a skilled full-stack Java developer and AWS Certified
+            Solutions Architect with over 7+ years of comprehensive experience
+            in the field, including 5+ years specifically dedicated to
+            Full-Stack development. Committed to delivering high-performance
+            software solutions that adhere to industry coding standards and best
+            practices, Binyam is known for his expertise in clean crafting
+            architecture and meticulous preparation of technical documentation
+            to ensure scalability and maintainability of projects.
           </p>
         </div>
         <div class="profile-card">
-          <img src="https://picsum.photos/101" alt="Profile Image" class="profile-photo" />
+          <img
+            src="https://picsum.photos/101"
+            alt="Profile Image"
+            class="profile-photo"
+          />
           <h3>Chris Le</h3>
           <p>
-            Hi I am Christopher Le, I love problem solving with various creative solutions, writing
-            efficient code, and working in a team environment with a passion for Front-End
-            Development. Enjoy using technology such as Javascript, React.js, Node.js, and much
-            more! I look forward to learning and growing as technology progresses further each year!
+            Hi I am Christopher Le, I love problem solving with various creative
+            solutions, writing efficient code, and working in a team environment
+            with a passion for Front-End Development. Enjoy using technology
+            such as Javascript, React.js, Node.js, and much more! I look forward
+            to learning and growing as technology progresses further each year!
           </p>
         </div>
         <div class="profile-card">
-          <img src="https://picsum.photos/102" alt="Profile Image" class="profile-photo" />
+          <img
+            src="https://picsum.photos/102"
+            alt="Profile Image"
+            class="profile-photo"
+          />
           <h3>Ivan Matev</h3>
           <p>
-            Ivan is an aspiring Software Developer with experience working to improve the
-            performance of organizations serving hundreds of individuals each year. Adept at
-            collaborating with others while ensuring high-quality services and programs. Career
-            history of training and supervising staff, promoting adherence to organizational
-            policies and industry standards.
+            Ivan is an aspiring Software Developer with experience working to
+            improve the performance of organizations serving hundreds of
+            individuals each year. Adept at collaborating with others while
+            ensuring high-quality services and programs. Career history of
+            training and supervising staff, promoting adherence to
+            organizational policies and industry standards.
           </p>
         </div>
       </div>
@@ -106,22 +108,59 @@
         <div class="footer-section">
           <h3>Contact Us</h3>
           <!-- we used email logo and clickable email address -->
-          <p><span style="font-size: 20px;">✉</span> <a href="mailto:example@gmail.com">example@gmail.com</a></p>
+          <p>
+            <span style="font-size: 20px">✉</span>
+            <a href="mailto:example@gmail.com">example@gmail.com</a>
+          </p>
           <p>Phone: 123-456-7890</p>
         </div>
-      <div class="footer-section">
-        <h3>Follow Us</h3>
-        <!-- we used social media icons and clickable links -->
-        <ul class="social-links">
-          <li><a href="https://www.instagram.com/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1024px-Instagram_icon.png" alt="Instagram"></a></li>
-          <li><a href="https://twitter.com/"><img src="https://www.vectorlogo.zone/logos/twitter/twitter-icon.svg" alt="Twitter"></a></li>
-          <li><a href="https://www.facebook.com/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Facebook_f_logo_%282019%29.svg/1200px-Facebook_f_logo_%282019%29.svg.png" alt="Facebook"></a></li>
-        </ul>
+        <div class="footer-section">
+          <h3>Follow Us</h3>
+          <!-- we used social media icons and clickable links -->
+          <ul class="social-links">
+            <li>
+              <a href="https://www.instagram.com/"
+                ><img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1024px-Instagram_icon.png"
+                  alt="Instagram"
+              /></a>
+            </li>
+            <li>
+              <a href="https://twitter.com/"
+                ><img
+                  src="https://www.vectorlogo.zone/logos/twitter/twitter-icon.svg"
+                  alt="Twitter"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/"
+                ><img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Facebook_f_logo_%282019%29.svg/1200px-Facebook_f_logo_%282019%29.svg.png"
+                  alt="Facebook"
+              /></a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-    <div class="footer-bottom">
-      <p>&copy; 2024 My Profile Cards. All rights reserved.</p>
-    </div>
-  </footer>
-</body>
+      <div class="footer-bottom">
+        <p>&copy; 2024 My Profile Cards. All rights reserved.</p>
+      </div>
+    </footer>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9I7cM9go2fEnN70lbXj9QQ7txoHSm8DO/ebE"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+    <script src="script.js"></script>
+  </body>
 </html>
