--- a/index.html
+++ b/index.html
@@ -98,6 +98,28 @@
             policies and industry standards.
           </p>
         </div>
+        <div class="profile-card">
+          <img src="https://picsum.photos/103" alt="Profile Image" class="profile-photo" />
+          <h3>Jasmine Rivera</h3>
+          <p>
+            Jasmine is a passionate environmentalist who loves spending time outdoors, hiking
+            through forests, and exploring nature. With a background in environmental science, she
+            is dedicated to protecting the planet and raising awareness about sustainability issues.
+            In her free time, Jasmine enjoys gardening, practicing yoga, and volunteering at local
+            conservation organizations.
+          </p>
+        </div>
+        <div class="profile-card">
+          <img src="https://picsum.photos/104" alt="Profile Image" class="profile-photo" />
+          <h3>Lucas Thompson</h3>
+          <p>
+            Lucas is a tech enthusiast and avid gamer with a knack for problem-solving. He is a
+            software engineer by profession, specializing in artificial intelligence and machine
+            learning. When he's not coding, Lucas can be found experimenting with new recipes in the
+            kitchen, playing the guitar, or immersing himself in the latest science fiction novels.
+            He's always up for a challenge and loves pushing the boundaries of innovation.
+          </p>
+        </div>
       </div>
     </main>
 
@@ -106,22 +128,43 @@
         <div class="footer-section">
           <h3>Contact Us</h3>
           <!-- we used email logo and clickable email address -->
-          <p><span style="font-size: 20px;">✉</span> <a href="mailto:example@gmail.com">example@gmail.com</a></p>
+          <p>
+            <span style="font-size: 20px">✉</span>
+            <a href="mailto:example@gmail.com">example@gmail.com</a>
+          </p>
           <p>Phone: 123-456-7890</p>
         </div>
-      <div class="footer-section">
-        <h3>Follow Us</h3>
-        <!-- we used social media icons and clickable links -->
-        <ul class="social-links">
-          <li><a href="https://www.instagram.com/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1024px-Instagram_icon.png" alt="Instagram"></a></li>
-          <li><a href="https://twitter.com/"><img src="https://www.vectorlogo.zone/logos/twitter/twitter-icon.svg" alt="Twitter"></a></li>
-          <li><a href="https://www.facebook.com/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Facebook_f_logo_%282019%29.svg/1200px-Facebook_f_logo_%282019%29.svg.png" alt="Facebook"></a></li>
-        </ul>
+        <div class="footer-section">
+          <h3>Follow Us</h3>
+          <!-- we used social media icons and clickable links -->
+          <ul class="social-links">
+            <li>
+              <a href="https://www.instagram.com/"
+                ><img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1024px-Instagram_icon.png"
+                  alt="Instagram"
+              /></a>
+            </li>
+            <li>
+              <a href="https://twitter.com/"
+                ><img
+                  src="https://www.vectorlogo.zone/logos/twitter/twitter-icon.svg"
+                  alt="Twitter"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/"
+                ><img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Facebook_f_logo_%282019%29.svg/1200px-Facebook_f_logo_%282019%29.svg.png"
+                  alt="Facebook"
+              /></a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-    <div class="footer-bottom">
-      <p>&copy; 2024 My Profile Cards. All rights reserved.</p>
-    </div>
-  </footer>
-</body>
+      <div class="footer-bottom">
+        <p>&copy; 2024 My Profile Cards. All rights reserved.</p>
+      </div>
+    </footer>
+  </body>
 </html>
