added my picture, edited the footer, added our email address with a link, added css elements for it, added about us

--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@
         color: #ffff99;
         font-size: 14px;
       }
+      .footer-section p a {
+        color: white; /*change the color of the email to white*/
+      }
+
+      .footer-section p a:hover {
+        color: #6699cc; /* Change color on hover */
+      }
 
       .footer-section p,
       .footer-section li a {
@@ -161,6 +168,10 @@
       .profile-card img {
         border-radius: 50%;
       }
+      .profile-photo2 {
+        width: 150px; /* Adjust the width of the profile picture */
+        height: 100px; /* Adjust the height of the profile picture */
+      }
 
       .profile-card h2 {
         color: #333;
@@ -207,16 +218,21 @@
         user-friendly interfaces and engaging web experiences.
       </p>
     </div>
+    <!--added my own profile pic-->
     <div class="profile-card">
       <img
-        src="https://picsum.photos/100"
+        src="images/WIN_20240404_17_08_06_Pro.jpg"
         alt="Profile Image"
-        class="profile-photo"
+        class="profile-photo2"
       />
       <h3>Abdi Deresa</h3>
       <p>
-        Abdi is a passionate web developer with expertise in creating
-        user-friendly interfaces and engaging web experiences.
+        I'm an emerging software developer, currently immersed in the Year Up
+        program at Seattle Central College. My focus is on honing my skills in
+        web development fundamentals and mastering essential software
+        development tools. I'm driven by a passion for learning and innovation,
+        and I'm eagerly embracing the challenges of my journey to become a
+        proficient professional in the dynamic field of technology.
       </p>
     </div>
     <div class="profile-card">
@@ -235,11 +251,33 @@
       <div class="footer-content">
         <div class="footer-section">
           <h3>About Us</h3>
-          <p>Details about the company.</p>
+          <!--wrote about us a year up student-->
+          <p>
+            As an emerging tech team, we're refining our expertise within the
+            dynamic training program offered by Year Up's.
+          </p>
         </div>
         <div class="footer-section">
           <h3>Contact</h3>
-          <p>Email: example@example.com</p>
+          <!-- added our email addresses with a tag with in p tag -->
+          <p>
+            Email:
+            <a href="mailto:ariana.simon@seattlecolleges.edu"
+              >ariana.simon@seattlecolleges.edu</a
+            >
+          </p>
+          <p>
+            Email:
+            <a href="mailto:amir.banks@seattlecolleges.edu"
+              >amir.banks@seattlecolleges.edu</a
+            >
+          </p>
+          <p>
+            Email:
+            <a href="mailto:abdi.Deresa@seattlecolleges.edu"
+              >abdi.Deresa@seattlecolleges.edu</a
+            >
+          </p>
         </div>
         <div class="footer-section">
           <h3>Follow Us</h3>
