--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         src="images/WIN_20240404_17_08_06_Pro.jpg"
         alt="Profile Image"
         class="profile-photo2"
-      />
+      /><!--created a new class for my profile picture-->
       <h3>Abdi Deresa</h3>
       <p>
         I'm an emerging software developer, currently immersed in the Year Up
