--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
       <div class="footer-content">
         <div class="footer-section">
           <h3>About Us</h3>
-          <!--wrote about us a year up student-->
+          <!--wrote about us a year up student at seattle central college-->
           <p>
             As an emerging tech team, we're refining our expertise within the
             dynamic training program offered by Year Up's.
