Minor changes to profile cards

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
     </nav>
   </header>
-  <body class="grid-wrapper">
+  <body >
     <main>
       <div class="profile-container">
         <div class="profile-card">
