--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
       rel="stylesheet"
     />
     <style>
-      body {
+      /* header css (a) */
+
+      header {
         font-family: "playfair display", sans-serif;
         margin: 0;
         padding: 0;
-        background: #f8d3a0;
+        background: #d496da;
       }
+
+      /* nav Css*/
+
       ul {
         margin: 0;
         padding: 0;
@@ -35,10 +40,19 @@
         transition: background-color 0.3s ease, color 0.3s ease;
       }
 
+      /* Add hover effect for anchor tags (a) */
+
       ul li a:hover {
-        background-color: #ca9b25;
+        background-color: #e857a9;
         color: #0e0c0c;
         border-radius: 4px;
+      }
+      /*body css*/
+      body {
+        font-family: "playfair display", sans-serif;
+        margin: 0;
+        padding: 0;
+        background: #d496da;
       }
 
       /* Footer CSS */
