--- a/index.html
+++ b/index.html
@@ -161,7 +161,18 @@
         user-friendly interfaces and engaging web experiences.
       </p>
     </div>
-    <footer>
+     <div class="profile-card">
+      <img
+        src="https://picsum.photos/100"
+        alt="Profile Image"
+        class="profile-photo"
+      />
+      <h3>John Doe</h3>
+      <p>
+        John is a passionate web developer with expertise in creating
+        user-friendly interfaces and engaging web experiences.
+      </p>
+    </div>    <footer>
       <div class="footer-content">
         <div class="footer-section">
           <h3>About Us</h3>
