--- a/index.html
+++ b/index.html
@@ -167,12 +167,13 @@
         alt="Profile Image"
         class="profile-photo"
       />
-      <h3>John Doe</h3>
+      <h3>Angie Zamorano</h3>
       <p>
-        John is a passionate web developer with expertise in creating
+        Angie is a passionate web developer with expertise in creating
         user-friendly interfaces and engaging web experiences.
       </p>
-    </div>    <footer>
+    </div>    
+    <footer>
       <div class="footer-content">
         <div class="footer-section">
           <h3>About Us</h3>
