--- a/index.html
+++ b/index.html
@@ -167,12 +167,48 @@
         alt="Profile Image"
         class="profile-photo"
       />
-      <h3>Angie Zamorano</h3>
+      <h3>Angie Z</h3>
       <p>
         Angie is a passionate web developer with expertise in creating
         user-friendly interfaces and engaging web experiences.
       </p>
-    </div>    
+    </div>  
+    <div class="profile-card">
+        <img
+          src="https://picsum.photos/100"
+          alt="Profile Image"
+          class="profile-photo"
+        />
+        <h3>Nabil H</h3>
+        <p>
+          Nabil is a passionate web developer with expertise in creating
+          user-friendly interfaces and engaging web experiences.
+        </p>
+      </div>  
+      <div class="profile-card">
+        <img
+          src="https://picsum.photos/100"
+          alt="Profile Image"
+          class="profile-photo"
+        />
+        <h3>Hermela</h3>
+        <p>
+         Hermela is a passionate web developer with expertise in creating
+          user-friendly interfaces and engaging web experiences.
+        </p>
+      </div> 
+      <div class="profile-card">
+        <img
+          src="https://picsum.photos/100"
+          alt="Profile Image"
+          class="profile-photo"
+        />
+        <h3>Mary jane</h3>
+        <p>
+          Mary is a passionate web developer with expertise in creating
+          user-friendly interfaces and engaging web experiences.
+        </p>
+      </div>  
     <footer>
       <div class="footer-content">
         <div class="footer-section">
